--- a/frontend/7-Next/basics/package.json
+++ b/frontend/7-Next/basics/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "core-basics",
+  "name": "basics",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-spinners": "^0.13.8",
-    "uuid": "^9.0.1"
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
